fixed design on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -504,11 +504,16 @@ header .main-nav{
     }
 
     .hero-section a{
-        padding: 1.3em 5em;
-        margin: .8em auto;
-        border-radius: 4em;
-        font-size: 1.1em;
-        display: none;
+        padding: .7em 2em;
+        margin: .5em .5em auto;
+        border-radius: 0;
+        font-size: 1em;
+        display: inline-block;
+        border-right: 1px solid var(--yellow) !important;
+    }
+
+    .hero-section a:nth-of-type(1){
+        margin-left: 0;
     }
 
     .about-block{
